--- a/backend/package.json
+++ b/backend/package.json
@@ -11,7 +11,9 @@
   "dependencies": {
     "dotenv": "^16.0.0",
     "express": "^4.17.3",
+    "fs": "^0.0.1-security",
     "mongoose": "^6.2.3",
-    "multer": "^1.4.4"
+    "multer": "^1.4.4",
+    "uuid": "^8.3.2"
   }
 }
