--- a/backend/package.json
+++ b/backend/package.json
@@ -17,13 +17,13 @@
     "express-handlebars": "^6.0.2",
     "fs": "^0.0.1-security",
     "jsonwebtoken": "^8.5.1",
+    "method-override": "^3.0.0",
     "mongoose": "^6.2.3",
     "multer": "^1.4.4",
     "passport": "^0.5.2",
     "passport-jwt": "^4.0.0",
     "passport-local": "^1.0.0",
     "passport-local-mongoose": "^6.1.0",
-    "uuid": "^8.3.2",
-    "webix": "^9.1.0"
+    "uuid": "^8.3.2"
   }
 }
